补充静态文件。

--- a/StudentManagement/StudentManagement/wwwroot/52abp.html
+++ b/StudentManagement/StudentManagement/wwwroot/52abp.html
@@ -5,7 +5,7 @@
     <title>52ABP.COM</title>
 </head>
 <body>
-    <h1>52ABP.COM 欢迎大家来学习</h1>
+    <h1>52ABP.COM 欢迎大家来学习  来自 52abp.html 文件内容</h1>
 
 </body>
 </html>
